<resources>
    <string name="system_name">智园国能</string>
    <string name="system_image_back">返回</string>
    <string name="app_versionName" translatable="false">3.6.1</string>
    <string name="user_has_expired">账户已过期，请您重新登录!</string>
    <string name="user_has_expired_en">account has expired, please relogin！</string>
    <string name="system_image_logo">Logo</string>
    <string name="system_image_setting">设置</string>
    <string name="system_image_search">搜索</string>
    <string name="system_rmb">￥</string>
    <string name="system_zfb">支付宝</string>
    <string name="system_bankcard">银行卡</string>
    <string name="system_shibi">食币</string>
    <string name="system_backmomey">退款</string>
    <string name="system_deal">团购</string>
    <string name="system_submit">提交</string>
    <string name="system_cancel">取消</string>
    <string name="system_sure">确定</string>
    <string name="system_sureifexit">是否确定要退出程序</string>
    <string name="system_exit">退出</string>
    <string name="system_delete">删除</string>
    <string name="login_edittext_phone">手机号</string>
    <string name="login_edittext_password">密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_textview_forgetpassword">忘记密码？</string>
    <string name="login_textview_register">注册账号</string>
    <string name="login_success">登录成功</string>
    <string name="register_edittext_phone">手机号码</string>
    <string name="register_edittext_code">验证码</string>
    <string name="register_button_code">获取验证码</string>
    <string name="register_edittext_name">姓名</string>
    <string name="register_radiobutton_sex">性别</string>
    <string name="register_radiobutton_man">男</string>
    <string name="register_radiobutton_woman">女</string>
    <string name="register_edittext_password">密码(6到16位)</string>
    <string name="register_edittext_confirm_password">确认密码</string>
    <string name="register_button_register">注册</string>
    <string name="register_textview_warning">注册视为同意蓝牙防丢器的</string>
    <string name="register_textview_protocol">  <a href="">用户协议</a></string>
    <string name="register_protocol">用户协议</string>
    <string name="str_get_pwd">获取密码</string>
    <string name="phone_format_not_match">手机号码的格式不正确</string>
    <string name="is_sending">正在发送</string>
    <string name="second">秒</string>
    <string name="resgister_ok">注册成功</string>
    <string name="code_has_send">验证码已发送,注意查收</string>
    <string name="pwd_has_send">密码已发送,注意查收</string>
    <string name="phone_not_empty">手机号码不能为空</string>
    <string name="code_not_empty">验证码不能为空</string>
    <string name="code_not_right">验证码不正确</string>
    <string name="name_not_empty">姓名不能为空</string>
    <string name="pwd_not_empty">密码不能为空</string>
    <string name="oldpwd_length_not_right">旧密码的长度为6-16位</string>
    <string name="pwd_length_not_right">密码的长度为6-16位</string>
    <string name="ensure_pwd_not_empty">确认密码不能为空</string>
    <string name="pwd_ensurepwd_not_match">密码和确认密码不相同</string>
    <string name="person_password_text_title">修改密码</string>
    <string name="person_oldpassword_text_enter">请输入旧密码</string>
    <string name="person_password_text_enter">请输入新密码</string>
    <string name="person_password_text_enteragain">请确认密码</string>
    <string name="person_password_btn_save">保存</string>
    <string name="person_password_update_ok">修改密码成功</string>
    <string name="edit_sex">修改性别</string>
    <string name="edit_ok">修改完成</string>
    <string name="edit_username">修改姓名</string>
    <string name="username_length_not_more_15">姓名的长度不超过15个字符</string>
    <string name="album">相册</string>
    <string name="camera">相机</string>
    <string name="select_photo_sourse">选择图片来源</string>
    <string name="sdcard_not_exist">内存卡不存在</string>
    <string name="exception_not_write_album">发生意外，无法写入相册</string>
    <string name="is_logout_user">是否要注销当前账户</string>
    <string name="scanner">扫一扫</string>
    <string name="device_name">设备名称:</string>
    <string name="device_status">设备状态:</string>
    <string name="check_net_config">请您检查网络配置</string>
    <string name="menuways_bookmenu">手机菜单</string>
    <string name="menuways_shopmenu">现场点菜</string>
    <string name="menuways_submit">提交预定</string>
    <string name="main_tabtext_shop">店铺</string>
    <string name="main_tabtext_order">订单</string>
    <string name="main_tabtext_person">我的</string>
    <string name="city_select">城市选择</string>
    <string name="city_unknown">未知</string>
    <string name="main_tabtext_device">Wifi设备</string>
    <string name="main_tabtext_camera">智能路由</string>
    <string name="main_tabtext_location">定位</string>
    <string name="main_tabtext_setting">设置</string>
    <string name="main_tabtext_info">软件介绍</string>
    <string name="shop_list_section_discount">折扣</string>
    <string name="shop_list_section_type">类型</string>
    <string name="shop_list_section_service">服务</string>
    <string name="shop_list_image_fresh">刷新</string>
    <string name="shop_list_curcity">当前城市：</string>
    <string name="shop_list_city_exchange">切换</string>
    <string-array name="discount_arr">
        <item>99</item>
        <item>95</item>
        <item>90</item>
        <item>85</item>
        <item>80</item>
        <item>75</item>
        <item>70</item>
    </string-array>
    <string-array name="server_arr">
        <item>预定</item>
        <item>点餐</item>
        <item>团购</item>
        <item>会员卡</item>
    </string-array>
    <string name="shop_search_edit_hint">搜索店铺名</string>
    <string name="shop_search_button_clear">清除所有搜索记录</string>
    <string name="shop_detail_shop_detail">店铺服务</string>
    <string name="shop_detail_logo">Shop Logo</string>
    <string name="shop_detail_collect">收藏</string>
    <string name="shop_momey">元</string>
    <string name="shop_detail_reserve">预定</string>
    <string name="shop_detail_order">点菜</string>
    <string name="shop_detail_group">团购</string>
    <string name="shop_detail_card">会员优惠</string>
    <string name="shop_detail_pay">支付</string>
    <string name="shop_detail_comment">消费评价</string>
    <string name="shop_detail_score">分</string>
    <string name="shop_detail_comment_detail">【详情】</string>
    <string name="shop_detailmsg_title">团购详情</string>
    <string name="shop_detailmsg_time">营业时间</string>
    <string name="shop_detailmsg_route">路线</string>
    <string name="shop_detailmsg_tablecondition">店铺评价</string>
    <string name="shop_detailmsg_showtable">显示所有餐台</string>
    <string name="shop_detailmsg_shopproduce">店铺介绍</string>
    <string name="shop_detailmsg_showdetail">显示所有</string>
    <string name="shop_map_driving">驾车</string>
    <string name="shop_map_bus">公交</string>
    <string name="shop_map_walking">步行</string>
    <string name="shop_map_noresult">抱歉，未找到结果</string>
    <string name="shop_map_search_route">查看路线</string>
    <string name="shop_deal_title">团购</string>
    <string name="shop_deal_detail_title">团购详情</string>
    <string name="shop_deal_detail_result_price">单价：</string>
    <string name="shop_deal_detail_result_num">数量：</string>
    <string name="shop_deal_detail_result_sum">总价：</string>
    <string name="shop_deal_detail_code">团购验证码：</string>
    <string name="shop_deal_detail_validity">有效期为：</string>
    <string name="shop_deal_detail_result_bindphone">您绑定的手机号码</string>
    <string name="shop_deal_detail_result_bindnew">绑定新的手机号</string>
    <string name="shop_deal_refund_ways">退款方式</string>
    <string name="shop_deal_refund_name">姓名</string>
    <string name="shop_deal_refund_email">邮箱</string>
    <string name="shop_deal_refund_relateways">联系方式</string>
    <string name="shop_deal_refund_bank">银行</string>
    <string name="shop_deal_refund_accountbank">开户行</string>
    <string name="shop_deal_refund_accountperson">开户人</string>
    <string name="shop_book_personnum">人数</string>
    <string name="shop_book_personname">姓名</string>
    <string name="shop_book_picktime">选择时间</string>
    <string name="shop_book_pickbooth">选择包间</string>
    <string name="shop_book_sittype">座位类型</string>
    <string name="shop_book_booth">包间</string>
    <string name="shop_book_dating">大厅</string>
    <string name="shop_book_submit">提交订单</string>
    <string name="shop_book_yes">是</string>
    <string name="shop_book_no">否</string>
    <string name="shop_book_male">先生</string>
    <string name="shop_book_female">女士</string>
    <string name="shop_local_dialog_money">元</string>
    <string name="shop_local_dialog_title">请输入您预订的金额：</string>
    <string name="shop_local_dialog_title1">请输入现金金额：</string>
    <string name="shop_local_dialog_btn">确认支付</string>
    <string name="shop_menu_search">搜索</string>
    <string name="shop_menu_search_hint">想吃啥呢</string>
    <string name="shop_menu_main">招牌菜</string>
    <string name="shop_menu_show1">共</string>
    <string name="shop_menu_show2">道菜</string>
    <string name="shop_menu_submit">选好了</string>
    <string name="shop_menulist_releateman">订单联系人:</string>
    <string name="shop_menulist_releateway">联系方式:</string>
    <string name="shop_menulist_submit">提交</string>
    <string name="shop_vipcard_name">会员卡</string>
    <string name="order_main_section_record">预定</string>
    <string name="order_main_section_order">点餐</string>
    <string name="order_main_section_group">团购</string>
    <string name="order_detail_order_title">订单详情</string>
    <string name="order_detail_order_addmenu">加菜</string>
    <string name="order_detail_deal_title">团购订单详情</string>
    <string name="order_detail_refund_title">团购退款详情</string>
    <string name="order_detail_order_number">订单号：</string>
    <string name="order_detail_submit_time">提交时间：</string>
    <string name="order_detail_order_dish_name">已点菜品</string>
    <string name="order_detail_price">参考价</string>
    <string name="order_detail_total_price">总价</string>
    <string name="order_detail_alipay">支付宝</string>
    <string name="order_detail_cash">现金</string>
    <string name="order_detail_icon">食币</string>
    <string name="order_detail_comment">评价</string>
    <string name="order_detail_hascon">已消费</string>
    <string name="order_detail_order_msg">预订信息</string>
    <string name="order_detail_order_phone">联系电话</string>
    <string name="order_detail_order_checksuc">支付成功您可以前往：</string>
    <string name="order_detail_order_mylist">我的订单</string>
    <string name="order_detail_order_comment">评价</string>
    <string name="order_success">预定成功</string>
    <string name="operate_success">操作成功</string>
    <string name="order_deal_detail_order_number">订单号：</string>
    <string name="order_deal_detail_refund_money">退款金额：</string>
    <string name="person_main_text_title">个人中心</string>
    <string name="person_main_text_shop">店铺收藏</string>
    <string name="person_main_text_mycoin">我的食币</string>
    <string name="person_main_text_setting">设置</string>
    <string name="person_main_text_logout">注销</string>
    <string name="person_main_image_information">个人资料</string>
    <string name="person_main_image_title">个人中心</string>
    <string name="person_main_image_shop">店铺收藏</string>
    <string name="person_main_image_mycoin">我的食币</string>
    <string name="person_main_image_setting">设置</string>
    <string name="person_main_image_logout">注销</string>
    <string name="person_information_text_title">编辑资料</string>
    <string name="person_information_text_photo">头像</string>
    <string name="person_information_text_telephone">手机号码</string>
    <string name="person_information_text_name">姓名</string>
    <string name="person_information_text_sex">性别</string>
    <string name="person_information_text_password">修改密码</string>
    <string name="ensure">确定</string>
    <string name="str_user_setting">用户信息</string>
    <string name="str_version">版本号</string>
    <string name="str_check_update">检查更新</string>
    <string name="str_light">手机闪光灯</string>
    <string name="str_off">关闭</string>
    <string name="str_on">打开</string>
    <string name="str_light_control">灯光控制</string>
    <string name="str_brightness">亮度</string>
    <string name="str_chrome">色度</string>
</resources>