<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/headbg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/null_btn_text"
            android:padding="10dp"
            android:src="@drawable/back_selector" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_textview_forgetpassword"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_size_20"
        android:layout_marginRight="@dimen/layout_size_20"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_selector"
            android:hint="@string/register_edittext_phone"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_code"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@drawable/edittext_selector"
                android:hint="@string/register_edittext_code"
                android:inputType="number" />

            <Button
                android:id="@+id/getcode"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/blue_btn_text"
                android:text="@string/register_button_code"
                android:textColor="@color/text_white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/border_gray"
            android:drawableLeft="@drawable/password"
            android:gravity="center"
            android:hint="@string/person_password_text_enter"
            android:password="true"
            android:singleLine="true" />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/border_gray"
            android:drawableLeft="@drawable/password"
            android:gravity="center"
            android:hint="@string/person_password_text_enteragain"
            android:password="true"
            android:singleLine="true" />


        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_size_50"
            android:layout_margin="@dimen/layout_size_20"
            android:background="@drawable/blue_btn_text"
            android:text="@string/ensure"
            android:textColor="@color/text_white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>