<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headbg">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/layout_size_50"
            android:layout_height="wrap_content"
            android:background="@drawable/null_btn_text"
            android:padding="10dp"
            android:src="@drawable/back_selector" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/person_password_text_title"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/border_gray"
            android:drawableLeft="@drawable/password"
            android:gravity="center"
            android:hint="@string/person_oldpassword_text_enter"
            android:password="true"
            android:singleLine="true" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/border_gray"
            android:drawableLeft="@drawable/password"
            android:gravity="center"
            android:hint="@string/person_password_text_enter"
            android:password="true"
            android:singleLine="true" />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/border_gray"
            android:drawableLeft="@drawable/password"
            android:gravity="center"
            android:hint="@string/person_password_text_enteragain"
            android:password="true"
            android:singleLine="true" />


        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_size_50"
            android:layout_margin="@dimen/layout_size_20"
            android:background="@drawable/blue_btn_text"
            android:text="@string/ensure"
            android:textColor="@color/text_white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>