<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_white">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/system_image_search"
        android:background="@color/headbg"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/system_image_search"
            android:background="@drawable/back_selector"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="5dp">
        </ImageView>

        <TextView
            android:id="@+id/device_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_light_control"
            android:textColor="@color/text_white"
            android:textSize="18sp"
            android:layout_weight="1"
            style="@style/text_head" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#1e6115"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_light_control"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:id="@+id/textView1"
            android:textColor="@color/text_white"
            android:layout_gravity="center_vertical"
            android:gravity="left"
             />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_light"
            android:id="@+id/textView2"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <com.watch.guoneng.util.SwitchButton
            android:id="@+id/switchLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginRight="5dp"

            android:textSize="16sp"

            style="@style/SwitchButtonStyle"
            android:textColor="#FFFFFF"
            app:kswTextOff="@string/str_off"
            app:kswTextOn="@string/str_on"


            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
</RelativeLayout>


    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#dddddd">

    </View>
</LinearLayout>