<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/headbg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/back_selector"
            android:background="@drawable/null_btn_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/str_light"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#1e6115"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_brightness"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:id="@+id/tv_brightness"
            android:textColor="@color/text_white"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            />
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="5dp"
        android:background="#ffffffff"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/small_voice"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarBrightness"
            android:layout_weight="5"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/big_voice"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="5dp" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#1e6115"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_chrome"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:id="@+id/tv_chrome"
            android:textColor="@color/text_white"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            />
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="5dp"
        android:background="#ffffffff"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/small_voice"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarChrome"
            android:layout_weight="5"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/big_voice"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="5dp" />

    </LinearLayout>

</LinearLayout>